--- a/www/templates/auth/sign-in.html
+++ b/www/templates/auth/sign-in.html
@@ -6,10 +6,10 @@
         <p style="padding-left:40px;padding-right:40px;">Power backend and quickly develop apps with Firebase.</p>
         <div style="height: 15px"></div>
         <div style="padding-left:40px;padding-right:40px;">
-          <button class="button button-block button-dark icon ion-social-twitter"> Sign in with Twitter</button>
-          <button class="button button-block button-dark icon ion-social-facebook" ng-click="FBLogin()"> Sign in with Facebook</button>
-          <button class="button button-block button-dark icon ion-social-google"> Sign in with Google</button>
-          <button class="button button-block button-clear button-stable" ui-sref="sign-in-with-email">Sign in with Email</button>
+          <button class="button button-block button-light button-outline icon ion-social-twitter" ng-click="signIn('twitter')"> Sign in with Twitter</button>
+          <button class="button button-block button-light button-outline icon ion-social-google" ng-click="signIn('google')"> Sign in with Google</button>
+          <button class="button button-block button-positive icon ion-social-facebook" ng-click="FBLogin()"> Sign in with Facebook</button>
+          <button class="button button-block button-clear button-positive" ui-sref="sign-in-with-email">Sign in with Email</button>
         </div>
     </ion-content>
 </ion-view>
