--- a/www/templates/auth/sign-in.html
+++ b/www/templates/auth/sign-in.html
@@ -7,8 +7,8 @@
         <div style="height: 15px"></div>
         <div style="padding-left:40px;padding-right:40px;">
           <button class="button button-block button-light button-outline icon ion-social-twitter" ng-click="signIn('twitter')"> Sign in with Twitter</button>
-          <button class="button button-block button-light button-outline icon ion-social-google" ng-click="googleSignIn()"> Sign in with Google</button>
-          <button class="button button-block button-positive icon ion-social-facebook" ng-click="FBLogin()"> Sign in with Facebook</button>
+          <button class="button button-block button-dark icon ion-social-google" ng-click="googleSignIn()"> Sign in with Google</button>
+          <button class="button button-block button-dark icon ion-social-facebook" ng-click="FBLogin()"> Sign in with Facebook</button>
           <button class="button button-block button-clear button-positive" ui-sref="sign-in-with-email">Sign in with Email</button>
         </div>
     </ion-content>
